--- a/style.css
+++ b/style.css
@@ -10,3 +10,54 @@ body {
 }
 
 /* Add styles here! */
+
+header {
+  padding-top: 96px;
+  padding-bottom: 64px;
+}
+
+strong {
+  color: hsl(160deg, 100%, 30%);
+}
+
+main {
+  background-color: hsl(0deg, 0%, 40%);
+  border-top: 8px solid hsl(0deg, 0%, 60%);
+  padding-top: 72px;
+  padding-bottom: 56px;
+}
+
+p {
+  font-size: 1.25rem;
+}
+
+.max-width-wrapper {
+  max-width: 800px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.intro-chunk {
+  max-width: 400px;
+}
+
+.card {
+  background-color: hsl(0deg, 0%, 100%);
+  border-bottom: 8px solid hsl(0deg, 0%, 60%);
+  padding-top: 8px;
+  padding-bottom: 8px;
+}
+
+.intro-chunk,
+.card {
+  padding-left: 24px;
+  padding-right: 24px;
+}
+
+.indented-heading {
+  width: fit-content;
+  background-color: hsl(45deg, 100%, 50%);
+  border-bottom: 8px solid hsl(45deg, 100%, 40%);
+  padding: 16px 32px;
+  margin: 0 0 0 -32px;
+}
